Fixed Country Names

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 <select id="countrySelect">
   <option value="">Select Country</option>
 <option value="Afghanistan">🇦🇫 Afghanistan</option>
-<option value="Aland Islands">🇦🇽 Åland Islands</option>
+<option value="Åland Islands">🇦🇽 Åland Islands</option>
 <option value="Albania">🇦🇱 Albania</option>
 <option value="Algeria">🇩🇿 Algeria</option>
 <option value="American Samoa">🇦🇸 American Samoa</option>
@@ -684,7 +684,7 @@
 <option value="Cambodia">🇰🇭 Cambodia</option>
 <option value="Cameroon">🇨🇲 Cameroon</option>
 <option value="Canada">🇨🇦 Canada</option>
-<option value="Cape Verde">🇨🇻 Cape Verde</option>
+<option value="Cabo Verde">🇨🇻 Cabo Verde</option>
 <option value="Cayman Islands">🇰🇾 Cayman Islands</option>
 <option value="Central African Republic">🇨🇫 Central African Republic</option>
 <option value="Chad">🇹🇩 Chad</option>
