--- a/index.html
+++ b/index.html
@@ -2614,7 +2614,7 @@ function restoreBackup() {
 
 
 <script>
-  const bannedCountries = ["Afghanistan", "Algeria", "Brunei", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Syria", "Somalia", "Yemen"];
+  const bannedCountries = ["Afghanistan", "Algeria", "Belarus", "Brunei", "Chad", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Syria", "Somalia", "Yemen"];
 
   fetch("https://ipinfo.io/json?token=103d8b1329c354")
     .then(response => response.json())
@@ -2623,7 +2623,9 @@ function restoreBackup() {
       const fullCountryNames = {
         "AF": "Afghanistan",
 	"DZ": "Algeria",
+        "BI": "Belarus",
         "BN": "Brunei",
+        "TD": "Chad",
         "IR": "Iran",
         "IQ": "Iraq",
         "LB": "Lebanon",
