--- a/index.html
+++ b/index.html
@@ -2617,7 +2617,7 @@ function restoreBackup() {
       const fullCountryNames = {
         "AF": "Afghanistan",
 	"DZ": "Algeria",
-        "BI": "Belarus",
+        "BY": "Belarus",
         "BN": "Brunei",
         "TD": "Chad",
         "IR": "Iran",
