--- a/index.html
+++ b/index.html
@@ -2608,7 +2608,7 @@ function restoreBackup() {
 
 
 <script>
-  const bannedCountries = ["Afghanistan", "Algeria", "Belarus", "Brunei", "Chad", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Syria", "Somalia", "Yemen"];
+  const bannedCountries = ["Afghanistan", "Algeria", "Belarus", "Brunei", "Chad", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Venezuela", "Syria", "Somalia", "Yemen"];
 
   fetch("https://ipinfo.io/json?token=103d8b1329c354")
     .then(response => response.json())
@@ -2620,6 +2620,7 @@ function restoreBackup() {
         "BY": "Belarus",
         "BN": "Brunei",
         "TD": "Chad",
+        "CU": "Cuba",
         "IR": "Iran",
         "IQ": "Iraq",
         "LB": "Lebanon",
@@ -2628,6 +2629,7 @@ function restoreBackup() {
         "QA": "Qatar",
         "PS": "Palestine",
         "OM": "Oman",
+        "VE": "Venezuela",
         "SY": "Syria",
         "SO": "Somalia",
         "YE": "Yemen"
