--- a/index.html
+++ b/index.html
@@ -2608,7 +2608,7 @@ function restoreBackup() {
 
 
 <script>
-  const bannedCountries = ["Afghanistan", "Algeria", "Belarus", "Brunei", "Chad", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Venezuela", "Syria", "Somalia", "Yemen"];
+  const bannedCountries = ["Afghanistan", "Algeria", "Bangladesh", "Belarus", "Brunei", "Chad", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Venezuela", "Syria", "Somalia", "Yemen"];
 
   fetch("https://ipinfo.io/json?token=103d8b1329c354")
     .then(response => response.json())
@@ -2617,6 +2617,7 @@ function restoreBackup() {
       const fullCountryNames = {
         "AF": "Afghanistan",
 	"DZ": "Algeria",
+        "BD": "Bangladesh",
         "BY": "Belarus",
         "BN": "Brunei",
         "TD": "Chad",
