--- a/index.html
+++ b/index.html
@@ -2608,7 +2608,7 @@ function restoreBackup() {
 
 
 <script>
-  const bannedCountries = ["Afghanistan", "Algeria", "Bangladesh", "Belarus", "Brunei", "Chad", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Venezuela", "Syria", "Somalia", "Yemen"];
+  const bannedCountries = ["Afghanistan", "Algeria", "Bangladesh", "Belarus", "Brunei", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Venezuela", "Syria", "Somalia", "Yemen"];
 
   fetch("https://ipinfo.io/json?token=103d8b1329c354")
     .then(response => response.json())
@@ -2620,7 +2620,6 @@ function restoreBackup() {
         "BD": "Bangladesh",
         "BY": "Belarus",
         "BN": "Brunei",
-        "TD": "Chad",
         "CU": "Cuba",
         "IR": "Iran",
         "IQ": "Iraq",
