--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
 <option value="Slovenia">🇸🇮 Slovenia</option>
 <option value="Solomon Islands">🇸🇧 Solomon Islands</option>
 <option value="Somalia">🇸🇴 Somalia</option>
+<option value="Somaliland">🇸🇴 Somaliland</option>
 <option value="South Africa">🇿🇦 South Africa</option>
 <option value="South Georgia and the South Sandwich Islands">🇬🇸 South Georgia and the South Sandwich Islands</option>
 <option value="South Korea">🇰🇷 South Korea</option>
@@ -2524,7 +2525,7 @@ function sendFile() {
             messages: [],
             profilePic: "https://png.pngtree.com/png-vector/20220609/ourmid/pngtree-administrator-account-avatar-boss-business-png-image_4941747.png",
             aboutMe: 'The Official Account of Lojani',
-            country: 'United States',
+            country: 'Nasbardash',
             badWordCount: 0,
             banned: false,
             deleted: false,
