--- a/index.html
+++ b/index.html
@@ -2583,7 +2583,7 @@ function restoreBackup() {
 
 
 <script>
-  const bannedCountries = ["Afghanistan", "Algeria", "Bangladesh", "Belarus", "Brunei", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Oman", "Venezuela", "Syria", "Somalia", "Yemen"];
+  const bannedCountries = ["Afghanistan", "Algeria", "Bangladesh", "Belarus", "Brunei", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Venezuela", "Syria", "Somalia", "Yemen"];
 
   fetch("https://ipinfo.io/json?token=103d8b1329c354")
     .then(response => response.json())
@@ -2603,7 +2603,6 @@ function restoreBackup() {
         "KP": "North Korea",
         "QA": "Qatar",
         "PS": "Palestine",
-        "OM": "Oman",
         "VE": "Venezuela",
         "SY": "Syria",
         "SO": "Somalia",
