--- a/index.html
+++ b/index.html
@@ -687,6 +687,7 @@
 <option value="Canada">🇨🇦 Canada</option>
 <option value="Cabo Verde">🇨🇻 Cabo Verde</option>
 <option value="Cayman Islands">🇰🇾 Cayman Islands</option>
+<option value="Caribbean Netherlands">🇧🇶 Caribbean Netherlands</option>
 <option value="Central African Republic">🇨🇫 Central African Republic</option>
 <option value="Chad">🇹🇩 Chad</option>
 <option value="Chile">🇨🇱 Chile</option>
