--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
   </div>
 
   <script>
-    const bannedWords = ["fuck", "shit", "ass", "asshole", "nigger", "bitch", "son of a bitch", "fucking", "nigga", "pussy", "puss", "dogshit", "bullshit", "kill", "cum", "penis", "f4ck", "sh1t", "2ss", "p4ss", "p4ssy", "n1gger", "2gger", "sus", "balls", "holy", "dick", "tits", "titis", "poop", "pee", "mock", "black person", "pipiska", "suck", "cock", "poopy", "motherfucker", "motherfucking", "cocky", "middle finger", "palestine"];
+    const bannedWords = ["fuck", "shit", "ass", "asshole", "nigger", "bitch", "son of a bitch", "fucking", "nigga", "pussy", "puss", "dogshit", "bullshit", "kill", "cum", "penis", "f4ck", "sh1t", "2ss", "p4ss", "p4ssy", "n1gger", "2gger", "sus", "holy", "dick", "tits", "titis", "poop", "pee", "mock", "pipiska", "suck", "cock", "poopy", "motherfucker", "motherfucking", "cocky", "middle finger", "palestine", "sex", "gay", "s4x", "s2x", "g2y", "g4y", "suck", "cunt", "racist", "ibyprofun", "butt", "tylenol"];
 
     function formatTime(date) {
       const hours = date.getHours().toString().padStart(2, '0');
