Captcha added on signup screen

--- a/index.html
+++ b/index.html
@@ -2583,7 +2583,7 @@ function restoreBackup() {
 
 </script>
 <script>
-  const bannedCountries = ["Afghanistan", "Algeria", "Bangladesh", "Brunei", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Syria", "Somalia", "Yemen"];
+  const bannedCountries = ["Afghanistan", "Algeria", "Brunei", "Cuba", "Iran", "Iraq", "Lebanon", "Libya", "North Korea", "Qatar", "Palestine", "Syria", "Somalia", "Yemen"];
 
   fetch("https://ipinfo.io/json?token=103d8b1329c354")
     .then(response => response.json())
@@ -2592,7 +2592,6 @@ function restoreBackup() {
       const fullCountryNames = {
         "AF": "Afghanistan",
 	"DZ": "Algeria",
-        "BD": "Bangladesh",
         "BN": "Brunei",
         "CU": "Cuba",
         "IR": "Iran",
