--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@ const bannedWords = [
   "dick", "tits", "titis", "poop", "pee", "mock", "pipiska", "suck", "cock",
   "poopy", "motherfucker", "motherfucking", "cocky", "middle finger",
   "palestine", "sex", "gay", "s4x", "s2x", "g2y", "g4y", "cunt", "racist",
-  "ibyprofun", "butt", "tylenol", "nazi", "naz", "anus", "sexy", "sexual",
+  "ibyprofun", "ibyprofen", "butt", "tylenol", "nazi", "naz", "anus", "sexy", "sexual",
   "cusemek", "cusomo",
   "abbo","abo","abortion","abuse","addict","addicts","adult","africa","african",
   "alla","allah","alligatorbait","amateur","american","anal","analannie",
